<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bg_api"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/family_semi_round_bold"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/choose_location" />


        <TextView
            android:id="@+id/tvMapCh"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_itme"
            android:padding="12dp"
            android:fontFamily="@font/family_semi_round_medium"
            android:textColor="@color/bg_api2"
            android:layout_width="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/map" />


        <TextView
            android:id="@+id/tvSearchCh"
            android:padding="12dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/bg_api2"
            android:fontFamily="@font/family_semi_round_medium"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_itme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

</LinearLayout>