<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/containerDate"
    android:background="@color/white"

    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/family_semi_round_bold"
            android:gravity="center"
            android:text="@string/from"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFrom">

            <DatePicker
                android:id="@+id/date_p"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:paddingStart="8dp"
                android:paddingEnd="0dp" />

            <ru.ifr0z.notify.custom.TimePickerCustom
                android:id="@+id/time_p"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/date_p"
                android:timePickerMode="spinner" />


        </RelativeLayout>

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/family_semi_round_bold"
            android:gravity="center"
            android:text="@string/to"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <RelativeLayout
            android:id="@+id/relativeLayoutTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTo">

            <DatePicker
                android:id="@+id/date_p_to"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:paddingStart="8dp"
                android:paddingEnd="0dp" />

            <ru.ifr0z.notify.custom.TimePickerCustom
                android:id="@+id/time_p_to"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/date_p_to"
                android:timePickerMode="spinner" />


        </RelativeLayout>
        <Button
            android:id="@+id/btSaveAlarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/save"
            android:fontFamily="@font/family_semi_round_bold"
            android:background="@drawable/bg_icon"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutTo" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>